intro im prinzip rdy... grafiken von dispuitation und n2 datierung noch

--- a/intro.bib
+++ b/intro.bib
@@ -356,7 +356,7 @@ keywords={seclit},
   %note = {\url{https://archive.org/details/LalChandResearchIndologicalResearchCenterManuscriptCatalogDAVCollegeChandigarh}},
   keywords     = {catalogues}, 
 }%!
-
+u
 @inbook{kaviraj,
   author      = {Kavirāj, Gopīnāth},
   title       = {The system of cakras according to Gorakṣanātha},
@@ -457,6 +457,17 @@ keywords={seclit},
   year      = {1983},
   keywords   = {seclit},
 }%!
+
+@book{vohd218,
+  author      = {Ehlers, Gerhard},
+  title       = {Indische Handschriften, Teil 18: Die Śāradā-Handschriften der Sammlung Janert der Staatsbibliothek zu Berlin -- Preussischer Kulturbesitz},
+  year        = {2012},
+  volume      = {VOHD II, 18},
+  series      = {Verzeichnis der Orientalischen Handschriften in Deutschland},
+  publisher   = {Hartmut-Ortwin Feistel}, 
+  location    = {Göttingen},
+  keywords    = {catalogues},
+}
 
 @book{newcataloguscatalogorum8,
   author      = {Raghavan, V. and Narang, S. P. and Bhattacharya, D. C.},
