--- a/bindu.bib
+++ b/bindu.bib
@@ -11,6 +11,16 @@
   
 }
 
+@article{sanderson2004,
+  author    = {Sanderson, Alexis},
+  title     = {Religion and the State: \textit{{\S}aiva Officiants} in the Territory of the Brahmanical Royal Chaplain (with an appendix on the provenance and date of the \textit{Netratantra})},
+  journal   = {Indo-Iranian Journal},
+  volume    = {47},
+  year      = {2004},
+  pages     = {229--300},
+  keywords={seclit},
+}%!
+
 @misc{nadicakra,
    title={Nāḍīcakra},
    %author={Devendra},
