alles fertig bis auf n2 datierung - cf überall und index

--- a/bindu.tex
+++ b/bindu.tex
@@ -89,12 +89,253 @@
   Critical Edition \& Annotated Translation}
 \pagestyle{chapter2style}
 \newpage
+\begin{criticaledition}
+\begin{alignment}[
+  texts=edition[class="edition"];
+  translation[class="translation"],
+  ]
+  \begin{edition}
+    \begin{prose}[p50_02]
+      \noindent
+     %----------------------------
+%tatrodakaguṇāḥ-   lālā,   mūtraṃ,  śuklaṃ, raktaṃ, prasvedaḥ/      \E [P.70]
+%tatrodakaguṇāḥ    lālā----muvaṃ    śukraṃ  raktaṃ  prasvedaḥ       \P
+%tatrodakaguṇāḥ/   lāla----mutra----śukraṃ  raktaṃ  prasvedaḥ/      \B
+%tatrodakaguṇāḥ    lāla----mutra----śukraṃ  raktaṃ  prasvedaḥ//     \L
+%netrodake guṇāḥ// lālā----mutraṃ/  śukraṃ/ raktaṃ/ prasvedaḥ/      \N1
+%netrodakaguṇāḥ//  lālā/   mūtraṃ/  śukraṃ/         prasvedaḥ//     \N2
+%\om                                                                \D
+%                  lālā----mutraṃ   śukraṃ  raktaṃ      svedaḥ      \U1
+%                  tatrodakaguṇaḥ    lallā// mūtraṃ// śukraṃ//raktaṃ// prasvedaḥ//    \U2
+% tatrodakaguṇāḥ // lalā // mūtraṃ // śukraṃ // vaktraṃ // prasvedaḥ     \K1
+% tatrodakasya guṇāḥ// lālā// mutra//   śukraṃ//  raktaṃ//      prasvedaḥ//      \J      
+%-----------------------------
+%Therein the qualities of the water-element are: saliva, urine, semen, blood and sweat.  
+%-----------------------------5-6
+\note[type=source, labelb=_161b, labele=_161e, nosep]{cf. YSv (PT, p. 846): kṣudhā tṛṣṇālasya nidrā glāniś ca pañca vāriṇaḥ |}
+\note[type=source, labelb=_161b, labele=_161e, nosep]{cf. SSP 1.38 (Ed. p. 14): lālā mūtraṃ śukraṃ śoṇitaṃ sveda iti pañcaguṇā āpaḥ |}
+\note[type=analogia, labelb=_161b, labele=_161e, nosep]{cf. \citetitle{amaraughasasana} 13: lālāmūtrāsruniḥsvedaprasvedāḥ iti pañcaguṇā āpaḥ ||}
+\app{\lem[wit={ceteri}]{tatrodakaguṇāḥ}\linelabel{_161b}
+  \rdg[wit={N1}]{netrodake guṇāḥ}
+  \rdg[wit={N2}]{netrodakaguṇāḥ}
+  \rdg[wit={U1}]{\om}}/
+\app{\lem[wit={ceteri}]{lālā}
+  \rdg[wit={B,L}]{lāla°}}\dd{}
+\app{\lem[wit={E,N2,U2}]{mūtram}
+  \rdg[wit={N1,U1}]{mutraṃ}
+  \rdg[wit={B,L}]{°mutra°}
+  \rdg[wit={J}]{mutra}
+  \rdg[wit={P}]{°muvaṃ}}\dd{}
+\app{\lem[wit={ceteri}]{śukram}
+  \rdg[wit={E}]{śuklaṃ}}\dd{}
+\app{\lem[wit={ceteri}]{raktam}
+  \rdg[wit={K1}]{vaktraṃ}
+  \rdg[wit={N2}]{\om}}\dd{}
+\app{\lem[wit={ceteri}]{prasvedaḥ}
+  \rdg[wit={U1}]{svedaḥ}}\dd{}\linelabel{_161e}
+%----------------------------
+%tejaso guṇāḥ-  kṣudhā   tṛṣā   nidrā   glāniḥ ālasyam/   \E [P.70]
+%tejaso guṇāḥ   kṣudhā   tṛṣā   nidrā   glāniḥ ālasyaṃ    \P
+%tejaso guṇāḥ/  kṣudhāṃ  tṛṣā   nidrā   glāni  ālasyaṃ//  \B
+%tejaso guṇāḥ/  kṣudhā   tṛṣā   nidrā   glāni  ālasyaṃ//  \L
+%tejaso guṇāḥ// kṣudhā/  tṛṣā/  nidrā/  glāni/ alasyaṃ//  \N1
+%tejaso guṇāḥ// kṣudhā/  tṛṣā/  nidrā/  glāni/ ālasyaṃ//  \N2
+%\om                                                                                                                      \D
+%tejaso guṇāḥ   kṣudhā   tṛṣā   nidrā   glāni   ālasya    \U1
+%tejaso guṇaḥ// kṣudhā// tṛṣā// nidrā// glāni// ālasyaṃ// \U2
+%tejaso guṇāḥ //   kṣudhā  //  tṛṣā //  nidrā /  glāni /  ālasya  //  \K1
+%tejaso guṇāḥ//   kṣudhā//   tṛṣā//   nidrā//   glāni//   ālasyaṃ//    \J
+%-----------------------------
+%The qualities of the fire-element: hunger, thirst, sleep, exhaustion, sloth.   
+%-----------------------------7-8
+\note[type=source, labelb=_162b, labele=_162e, nosep]{cf. SSP 1.39 (Ed. p. 14): kṣudhā tṛṣā nidrā kāntir ālasyam iti pañcaguṇaṃ tejaḥ |}
+\note[type=source, labelb=_162b, labele=_162e, nosep]{cf. YSv (PT, p. 846):  kṣudhā tṛṣṇālasya nidrā glāniś ca pañca vāriṇaḥ |}
+\note[type=analogia, labelb=_162b, labele=_162e, nosep]{cf. \citetitle{amaraughasasana} 14: kṣudhā tṛṣṇā nidrā ālasyaṃ kāntiś ca iti pañcaguṇaṃ tejaḥ ||}
+tejaso \app{\lem[wit={ceteri}]{guṇāḥ}\linelabel{_162b}
+  \rdg[wit={U2}]{guṇaḥ}}/
+\app{\lem[wit={ceteri}]{kṣudhā}
+  \rdg[wit={B}]{kṣudhāṃ}}\dd{}
+tṛṣā\dd{}
+nidrā\dd{}
+\app{\lem[wit={E,P}]{glāniḥ}
+  \rdg[wit={ceteri}]{glāni}}\dd{}
+\app{\lem[wit={ceteri}]{ālasyam}
+  \rdg[wit={K1,U1}]{ālasya}}\dd{}\linelabel{_162e}
+%-----------------------------
+%vāyor guṇāḥ - dhāvanaṃ  majjanaṃ   nirodhanaṃ    prasāraṇam   ākuṃcanaṃ  ceti/   \E
+%vāyor guṇāḥ   dhāvanaṃ  majjanaṃ   nirodhanaṃ    prasāraṇaṃ   ākuṃcanaṃ  ceti    \P
+%vāyo  guṇāḥ/  dhāvanaṃ  majjanaṃ   nirodhanaṃ/   prasāraṇaṃ/  ākuṃcanaṃ  ceti/   \B
+%vāyor guṇāḥ// dhāvanaṃ  majjanaṃ   nirodhanaṃ    prasāraṇaṃ   ākuṃcanaṃ  ceti... \L
+%vāyor guṇāḥ/  dhāvanaṃ/ majjanaṃ/  nirodhanaṃ/   prasāraṇaṃ/  ākuṃcanaṃ/ ceti//  \N1
+%vāyo  guṇāḥ/  dhāvanaṃ/ majana/    virodhana/    praśaraṇāṃ/  ākūrcana   ceti//  \N2
+%%\om                                                                             \D
+%vāyu  guṇā    dhāvanaṃ  mano----------rodhanaṃ   prasāraṇaṃ   ākuṃcanaṃ  ceti    \U1
+%vāyo  guṇaḥ// dhāvanaṃ// majjanaṃ// nirodhanaṃ// prasāraṇaṃ// ākuṃcanaṃ//        \U2
+%vāyor  guṇāḥ  //  dhāvanaṃ // majjanaṃ / nirodhanaṃ // prasāraṇaṃ // ākuṃcanaṃ ceti // \K1
+%vāyor  guṇāḥ//  dhāvanaṃ// majjanaṃ// rodhanaṃ//   prasāraṇaṃ//   ākuṃcanaṃ  ceti//    \J
+%-----------------------------
+%The qualities of the wind-element are: wash off, marrow, confinement, expansion and contraction. 
+%----------------------------9-10
+\note[type=source, labelb=_163b, labele=_163e, nosep]{cf. SSP 1.40 (Ed. p. 14): dhāvanaṃ plavanaṃ prasāraṇaṃ ākuñcanaṃ nirodhanam iti pañcaguṇo vayuḥ |}
+\note[type=source, labelb=_163b, labele=_163e, nosep]{cf. YSv (PT, p. 846): rogo lajjā bhayodvegau dhāraṇā ca marudguṇāḥ |}
+\note[type=analogia, labelb=_163b, labele=_163e, nosep]{cf. \citetitle{amaraughasasana} 15: dhāvanaṃ valganam ākuñcanaṃ prasāraṇaṃ nirodhaś ceti pañcaguṇo vāyuḥ  ||}
+\app{\lem[wit={ceteri},alt={vāyor}]{vāyo\skp{r-gu}}\linelabel{_163b}
+  \rdg[wit={B,N2,U2}]{vāyo}
+  \rdg[wit={U1}]{vāyu}
+}\app{\lem[wit={ceteri},alt={guṇāḥ}]{\skm{r-gu}ṇāḥ}
+  \rdg[wit={U1}]{guṇā}}/
+dhāvanam\dd{}
+\app{\lem[wit={ceteri}, alt={majjanam}]{majjanam}
+  \rdg[wit={N2}]{majana}
+  \rdg[wit={U1}]{mano°}}\dd{}
+\app{\lem[wit={ceteri}]{nirodhanam}
+  \rdg[wit={J,U1}]{rodhanaṃ}
+  \rdg[wit={N2}]{virodhana}}\dd{}
+prasāraṇam\dd{}
+\app{\lem[wit={ceteri}]{ākuñcanam}
+  \rdg[wit={N2}]{ākūrcana}}
+\app{\lem[wit={ceteri}]{ceti}
+  \rdg[wit={U2}]{\om}}\dd{}\linelabel{_163e}
+%----------------------------
+%ākāśasya guṇāḥ – rāga-dveṣau      bhayaṃ   lajjā   mohaḥ/  \E
+%ākāśasya guṇāḥ   rāga-dveṣaḥ      bhayaṃ   lajjā   mohaḥ   \P
+%ākāśasya guṇāḥ/  rāga-dveṣ--------bhayaṃ   lajjā   moha/   \B
+%ākāśasya guṇāḥ// rāga-dveṣ--------bhayaṃ   lajjā   moha//  \L
+%ākāsasya guṇāḥ/  rāga-dveṣo/      bhayaṃ/  lajjā/  mohaḥ/  \N1
+%ākāsasya guṇāḥ// rāga/ dveṣau/    bhayaṃ/  lajjā/  moha/   \N2
+%\om                                                        \D CHECK!!!!
+%ākāśasya guṇaḥ   rāgadveṣau       bhayaṃ   lajjā   mohā    \U1
+%ākāśasya guṇāḥ// rāgaḥ// dveṣaḥ// bhayaṃ// lajjā// mohaḥ// \U2
+%ākāśasya guṇaḥ // rāgadveṣau // bhayaṃ lajjā // mohaḥ //    \K1
+%ākāśasya guṇāḥ//   rāgadveṣau// bhayaṃ//   lajjā//   mohaḥ//    \J
+%-----------------------------
+%The qualities of the space-element are: attachment, aversion, fear, shame and confusion. 
+%----------------------------11-12
+\note[type=source, labelb=_164b, labele=_164e, nosep]{cf. SSP 1.41 (Ed. pp. 14-15): rāgo dveṣo bhayaṃ lajjā moha iti pañcaguṇa ākaśaḥ |}
+\note[type=analogia, labelb=_164b, labele=_164e, nosep]{cf. \citetitle{amaraughasasana} 16: rāgo dveṣo lajjā bhayaṃ mohaś ceti pañcaguṇa ākāśaḥ iti pañcaguṇālaṅkṛtāni pañcatattvāni ||}
+ākāśasya\linelabel{_164b} \app{\lem[wit={ceteri}]{guṇāḥ}
+  \rdg[wit={K1,U1}]{guṇaḥ}}/
+\app{\lem[wit={U2}]{rāgaḥ}
+  \rdg[wit={ceteri}]{rāga°}}\dd{}
+\app{\lem[wit={P,U2}]{dveṣaḥ}
+  \rdg[wit={N1}]{°dveṣo}
+  \rdg[wit={E,J,K1,U1}]{°dveṣau}
+  \rdg[wit={B,L}]{dveṣ°}}\dd{}
+bhayam\dd{}
+lajjā\dd{}
+\app{\lem[wit={E,P,N1,U2}]{mohaḥ}
+  \rdg[wit={B,L,N2}]{moha}
+  \rdg[wit={U1}]{mohā}}\dd{}\linelabel{_164e} 
+\end{prose}
+              \ekddiv{
+                     head={[\uproman{51}. \textbf{pañcaprakārā antaḥkaraṇasya}]},
+                     type=section,
+                     depth=2, 
+                     n=LI
+                   }
+                   \phantomsection\label{kulpentad}
+                   \xmlhead[h51]{[LI. pañcaprakārā antaḥkaraṇasya]}
+                   \phantomsection
+                    \addcontentsline{toc}{section}{LI. pañcaprakārā antaḥkaraṇasya}
+    \begin{prose}[p51_01]
+      \phantomsection\label{greatelements2x}
+      \noindent
+%----------------------------
+%tad anaṃtaram ekādaśī   kā buddhir utpadyate/ \E
+%tad anaṃtaram ekādṛśy  ekā buddher utpadyate  \P
+%tad anaṃtaraṃ metādaśī     buddhir utpadyate/ \B
+%tad anaṃtaraṃ etādaśī      buddhir utpadyate.. \L
+%tad anaṃtaraṃ etādṛśā  ekā buddhir utpadyate/ \N1
+%tad anaṃtaraṃ etādṛśī  ekā buddhir utpadyate/ \N2
+%\om                                                                 \D
+%tad anaṃtaraṃ etādaśī  ekā buddhir utpadyate.. \U1
+%tad anaṃtaram etādṛśy  ekā buddhir utpadyate// \U2
+%tad anaṃtaraṃ   etādaśī  ekā buddhir utpadyate // \K1
+%tad anaṃtaraṃ// etādaśī  ekā buddhir utpadyate//  \J (P28/34)      
+%-----------------------------
+%Then, immediately following that, only such an insight arises. 
+%----------------------------13
+\note[type=source, labelb=_165b, labele=_165e, nosep]{cf. YSv (PT, p. 846): etaj jñānenaiva teṣāṃ buddhir utpadyate śubhā | yadyapi sargakāṇḍe pṛthvyāder guṇā uktās tathāpy etaj jñānenety anena kāryakāraṇabhāvadarśanāya punar ucyante |}
+tad\skp{-}anantara\skp{m-e}\app{\lem[wit={U2,P},alt={etādṛśy}]{\skm{m-e}tādṛ\skp{śy-e}}\linelabel{_165b}
+  \rdg[wit={N2}]{etādṛśī}
+  \rdg[wit={N1}]{etādṛśā}
+  \rdg[wit={J,K1,L,U1}]{etādaśī}
+  \rdg[wit={E}]{ekādaśī}
+  \rdg[wit={B}]{metādaśī}
+}\app{\lem[wit={ceteri},alt={ekā}]{\skm{śy-e}kā}
+  \rdg[wit={E}]{kā}
+  \rdg[wit={B,L}]{\om}}
+\app{\lem[wit={ceteri},alt={buddhir}]{buddhi\skp{r-u}}
+  \rdg[wit={P}]{buddher}}\skm{r-u}tpadyate/\linelabel{_165e}
+%----------------------------
+%mano buddhyahaṃkārāś   cittaṃ caitanyaṃ ceti/     ete paṃcaprakārā    aṃtaḥkaraṇasya/ \E
+%mano buddhir aṃhaṃkāraś  cittaṃ caitanyaṃ ceti    ete paṃcāpiprakārā  aṃtaḥkaraṇasya  \P %%%7672.jpg 
+%mano buddhir ahaṃkāra/  ścittaṃ caitanyaṃ ceti/   ete paṃcāpiprakāra/ aṃtaḥkarṇsya    \B
+%mano buddhir ahaṃkāraś   cittaṃ caitanyaṃ ceti... ete paṃcāpiprakārāḥ aṃtaḥkarṇsya  \L
+%mano buddhir ahaṃkāra    cittaṃ           ceti/   ete paṃcāpiprakārā  aṃtaḥkaraṇasya/ \N1
+%mano buddhir ahaṃkāra    cittaṃ           ceti//  ete paṃcāprakārā    aṃtakaraṇasya//  \N2
+%\om                                                                                   \D
+%mano buddhir ahaṃkāraś   cittaṃ           ceti... ete paṃcāpiprakārā  aṃtaḥkarṇva    \U1
+%mano buddhir ahaṃkāraḥ// cittaṃ cautanyaṃ ceti//  ete paṃcaprakāraḥ   aṃtaḥkaraṇasya \U2
+%mano buddhir ahaṃkāraś   cittaṃ ceti // ete paṃcāpiprakārā  aṃtaḥkarṇasya // \K1
+%mano buddhir ahaṃkāraś   cittaṃ ceti//  ete paṃcāpiprakārā  aṃtaḥkaraṇasya// cha//    \J
+%-----------------------------
+%The mind, the intellect, the ego, the spirit and consciousness. These are the five modes of the internal organ. 
+%----------------------------14-15
+\note[type=source, labelb=_166b, labele=_166e, nosep]{cf. YSv (PT, p. 846): mano buddhir ahaṅkāraś cittaṃ caitanyam eva ca | ete pañcaprakārāś ca antaḥkaraṇasambhavāḥ |}
+\note[type=source, labelb=_166b, labele=_166e, nosep]{cf. SSP 1.42 (Ed. p. 15): mano buddhir ahaṅkāraś cittaṃ caitanyam ity antaḥkaraṇapañcakam |}
+mano\linelabel{_166b} \app{\lem[wit={ceteri},alt={buddhir}]{buddhi\skp{r-a}}
+  \rdg[wit={E}]{buddhy}
+}\app{\lem[wit={ceteri},alt={ahaṃkāraś}]{\skm{r-a}haṃkāra\skp{ś-ci}}
+  \rdg[wit={E}]{ahaṃkārāś}
+  \rdg[wit={U2}]{ahaṃkāraḥ ||}
+  \rdg[wit={B}]{ahaṃkāra | ś}
+  \rdg[wit={N1,N2}]{ahaṃkāra}
+}\skm{ś-ci}ttaṃ \app{\lem[wit={Y}]{caitanyaṃ}
+  \rdg[wit={X}]{\om}} ceti/
+ete \app{\lem[wit={E}]{pañcaprakārā}
+  \rdg[wit={N2}]{paṃcāprakārā}
+  \rdg[wit={U2}]{paṃcaprakāraḥ}
+  \rdg[wit={P,J,K1,N1,U1}]{paṃcāpiprakārā}
+  \rdg[wit={B}]{paṃcāpiprakāra |}
+  \rdg[wit={L}]{paṃcāpiprakārāḥ}}
+\app{\lem[wit={ceteri}, alt={antaḥkaraṇasya}]{antaḥkaraṇasya}
+  \rdg[wit={ceteri}]{aṃtaḥkaraṇasya || cha ||}
+  \rdg[wit={N2}]{aṃtakaraṇasya}
+  \rdg[wit={K1}]{aṃtaḥkarṇasya}
+  \rdg[wit={B,L}]{aṃtaḥkarṇsya}
+  \rdg[wit={U1}]{aṃtaḥkarṇva}}/\linelabel{_166e}
+\end{prose}
+  \end{edition}
+  \begin{translation}
+    \begin{tlate}[p50_02]
+
+       \hspace{1.5em} In this case, the five qualities of the water element are saliva, urine, semen, blood, [and] sweat.
+
+       \hspace{1.5em} The qualities of the fire-element are hunger, thirst, sleep, exhaustion, [and] sloth.
+
+       \hspace{1.5em} The qualities of the wind-element are abrasion, immersion, cessation, expansion, [and] contraction.
+
+       \hspace{1.5em} The qualities of the space-element are \footnote{The \emph{Yogasvarodaya} (PT) does not include the five qualities of \textit{ākāśa}.} passion, aversion, fear, shame and confusion.\footnote{The earliest formulation of these specific pentads that explain the manifestation of the five elements in the human body can be at least traced back to the beginning of the sixteenth century, more precisely the \citetitle{amaraughasasana}, whose oldest manuscript is dated to 1525 CE and according to \citeauthor{mallinsonnath} (2011: 16) is perhaps the oldest Nath work on Haṭhayoga.}
+\end{tlate}
+                 \ekddiv{
+                     head={[\uproman{51}. \textbf{Five modes of the internal organ}]},
+                     type=section,
+                     depth=2, 
+                     n=LI
+                   }
+                   \xmlhead[h51]{[LI. Five modes of the internal organ]}
+    \begin{tlate}[p51_01] \noindent
+      Then, immediately following that, such unique insight\footnote{In this case I translated \textit{buddhi} as insight, since \textit{buddhi} as a \textit{tattva} would unlikely arise from the previously mentioned five great elements. In addition, it is dealt with immediately afterwards in the context of the internal organ. Henceforth, it seems probable that it must refer to the specific knowledge that arises from the accomplishment of yoga, as mentioned in section \uproman{48}.} arises: the mind, the intellect, the ego, the mental faculty, and consciousness.\footnote{Apart from the \textit{Tattvayogabindu}, this particular pentad appears only in the \emph{Siddhasiddhāntapaddhati} and the \emph{Yogasvarodaya}. I have not been able to trace it further back in the textual record. Since both sources are associated with the Nāth milieu, it is conceivable that this pentadic scheme formed part of the process of consolidating a distinct sectarian identity for the Nāth Sampradāya. Notably, \textit{citta}—which in several earlier, related traditions subsumes \textit{buddhi}, \textit{ahaṃkāra}, and \textit{manas} (cf. \citetitle{peterson1888}: 4275), and is regarded as being opposed or perceived by consciousness (\textit{caitanya})—here becomes a constituent element of the internal organ (\textit{antaḥkaraṇa}) itself.} These are the five modes of the internal organ.
+\flushpage
+    \end{tlate}
+  \end{translation}
+\end{alignment}
+\hardbreak %after pp. 163-164
+  \end{criticaledition}
 
 \newpage
 \selectlanguage{english}
-
-
-
 \chapter{Appendix}
 \section{Figures}
  
