everything done except for n2 date

--- a/intro.bib
+++ b/intro.bib
@@ -6,9 +6,8 @@
   publisher = {John Wiley \& Sons Ltd.},
   year      = {2023},
   chapter   = {7},
-  keywords     = {seclit},
-   pages        = {63--76},
-  
+  keywords  = {seclit},
+  pages    = {63--76}, 
 }
 
 @misc{nadicakra,
@@ -234,7 +233,7 @@ keywords={seclit},
   keywords     = {seclit}, 
 }%!
 
-@misc{ytbe,
+@misc{tybe,
    title={Binduyogaḥ},
    subtitle={Binduyogaḥ with Bhāṣaṭīkā},
    editor={Miśra, Jvālāprasāda},
@@ -256,7 +255,7 @@ keywords={seclit},
   keywords = {seclit}, 
 }%!
 
-@misc{ytbp,
+@misc{tybp,
    title={Tatvabiṃduyoga},
    subtitle={Tatvabiṃduyoga},
    howpublished={Ms. No. 664. Bhandarkar Oriental Research Institute, Pune},
@@ -265,7 +264,61 @@ keywords={seclit},
    keywords={primary},
 }%!
 
-@misc{ytbb,
+@misc{tybp2,
+   title={Rājayogamāhātmya},
+   subtitle={Rājayogamāhātmya},
+   howpublished={Ms. No. 81/359. Anandashrama Sanstha, Pune},
+   %year={Saṃvat 1867},
+   %shorthand={P},
+   keywords={primary},
+}%!
+
+@misc{tybs,
+   title={Rājayoga},
+   subtitle={Rājayoga},
+   howpublished={Ms. No. 601. M.T.R. College Manuscript Library, Surat},
+   %year={Saṃvat 1867},
+   %shorthand={P},
+   keywords={primary},
+}%!
+
+@misc{tybk1,
+   title={Tatvayogabindu},
+   subtitle={Tatvayogabindu},
+   howpublished={Ms. No. G 11019. Asiatic Society of Bengal, Kolkata},
+   %year={Saṃvat 1867},
+   %shorthand={P},
+   keywords={primary},
+}%!
+
+@misc{tybk2,
+   title={Tattvabinduyoga},
+   subtitle={Tattvabinduyoga},
+   howpublished={Ms. No. IM 5441. Asiatic Society of Bengal, Kolkata},
+   %year={Saṃvat 1867},
+   %shorthand={P},
+   keywords={primary},
+}%!
+
+@misc{tybk3,
+   title={Tattvayogabindu},
+   subtitle={Tattvayogabindu},
+   howpublished={Ms. No. G 5538A. Asiatic Society of Bengal, Kolkata},
+   %year={Saṃvat 1867},
+   %shorthand={P},
+   keywords={primary},
+}%!
+
+@misc{tybj,
+   title={Tattvayogabinduḥ},
+   subtitle={Tattvayogabinduḥ},
+   howpublished={Ms. No. 55769. Jawaharlal Neru University Library, New Delhi},
+   %year={Saṃvat 1867},
+   %shorthand={P},
+   keywords={primary},
+}%!
+
+@misc{tybb,
    title={Tatvabiṃduyoga},
    subtitle={Tatvabiṃduyoga},
    howpublished={Ms. No. D 4587. Bodleian Library, Oxford},
@@ -275,43 +328,60 @@ keywords={seclit},
    keywords={primary},
 }%!
 
-@misc{ytbl,
+@misc{tybc,
+   title={Tatvabinduyoga},
+   subtitle={Tatvabinduyoga},
+   howpublished={Ms. No. 5760, Nagpur University Library, Nagpur},
+   %address={},
+   %year={n.d.},
+   %shorthand={B},
+   keywords={primary},
+}%!
+
+@misc{tybl,
    title={Tatvabiṃduyoga},
    subtitle={Tatvabiṃduyoga},
    howpublished={Ms. No. LRL 5876. Lalchand Research Library, DAV College, Chandigarh},
    keywords={primary},
 }%!
 
-@misc{ytbn1,
+@misc{tybn1,
    title={Tatvayogabiṃdu},
    subtitle={Tatvayogabiṃdu},
-   howpublished={Ms. No. 5-2724, NGMPP Reel No. B 38-31. National Archives of Nepal, Kathmandu},
+   howpublished={Ms. No. B 38-31, NGMPP Reel No. NAK 5/2724. National Archives of Nepal, Kathmandu},
    keywords={primary},
 }%!
 
-@misc{ytbn2,
+@misc{tybn2,
    title={Tatvayogabiṃdu},
    subtitle={Tatvayogabiṃdu},
-   howpublished={Ms. No. 3-750, NGMPP Reel No. B 38-35 and A 1327-14. National Archives of Nepal, Kathmandu},
+   howpublished={Ms. No. B 38-35 and A 1327-14, NGMPP Reel No. 3-750. National Archives of Nepal, Kathmandu},
    %shorthand={N\textlowerscript{2}},
    keywords={primary},
 }%!
 
-@misc{ytbd,
+@misc{tybd,
    title={Tatvayogabiṃdu},
    subtitle={Tatvayogabiṃdu},
    howpublished={Ms. No. 30019. Indira Gandhi National Centre for the Arts, Delhi},
    keywords={primary},
 }%!
 
-@misc{ytbd2,
+@misc{tybv3,
+   title={Tattvayogavicāraḥ},
+   subtitle={Tattvayogavicāraḥ},
+   howpublished={Ms. No. 10558. Baroda Oriental Institute, Central Library, Vadodara},
+   keywords={primary},
+}%!
+
+@misc{tybd2,
    title={Yogasaṃgraha},
    subtitle={Yogasaṃgraha},
    howpublished={Ms. No. IGNCA 30020. Indira Gandhi National Centre for the Arts, Delhi},
    keywords={primary},
 }%!
 
-@misc{ytbu1,
+@misc{tybu1,
    title={Tatvayogaviduḥ},
    subtitle={Tatvayogaviduḥ},
    %author={Rāmacandraparamahaṃsa},
@@ -319,7 +389,7 @@ keywords={seclit},
    keywords={primary},
 }%!
 
-@misc{ytbu2,
+@misc{tybu2,
    title={Tattvabinduyogaḥ},
    subtitle={Tattvabinduyogaḥ},
    %author={Rāmacandraparamahaṃsa},
@@ -356,7 +426,7 @@ keywords={seclit},
   %note = {\url{https://archive.org/details/LalChandResearchIndologicalResearchCenterManuscriptCatalogDAVCollegeChandigarh}},
   keywords     = {catalogues}, 
 }%!
-u
+
 @inbook{kaviraj,
   author      = {Kavirāj, Gopīnāth},
   title       = {The system of cakras according to Gorakṣanātha},
@@ -549,13 +619,14 @@ keywords={seclit},
   keywords   = {catalogues},
 }%!
 
-@book{orl_srinagar2021,
+@book{srinagar2021,
   title        = {Catalogue of Sanskrit Manuscripts at the Oriental Research Library, Srinagar},
   author       = {Indira Gandhi National Centre for Arts},
   howpublished = {Digital catalogue, Oriental Research Library, Srinagar},
   institution  = {Indira Gandhi National Centre for Arts (IGNCA)},
   year         = {2021},
   url          = {https://archive.org/details/jk-orl-srinagar-sanskrit},
+  keywords   = {catalogues},
 }
 
 @book{newcataloguscatalogorum23,
@@ -1908,14 +1979,15 @@ keywords={seclit},
  }%!
 
 @book{birch2024, 
-title={The Ujjain Yogacintāmaṇi},
+title={Āsanas of the Yogacintāmaṇi: The Largest Premodern Compilation on Postural Practice},
 author={Birch, Jason}, 
 year={2024}, 
-publisher={Unknown yet},
-note={forthcoming},
-address={Tasmania},
-keywords={seclit}
+publisher={École française d’Extrême-Orient},
+address={Pondicherry},
+howpublished={Collection Indologie - 162, Haṭha Yoga Series - 5},
+keywords={seclit},
 }%!
+
 
 @article{törzsök2022,
  title={Religions de l’Inde : études shivaïtes}, 
@@ -2137,12 +2209,12 @@ Sound},
 
 @misc{datta2024,
  title= {Dattātreyayogaśāstra},
- subtitle= {The Dattātreyayogaśāstra (forthcoming)},
+ subtitle= {The Dattātreyayogaśāstra},
  editor= {Mallinson, James},
  year= {2024},
   publisher={École française d’Extrême-Orient},
   note={Pondicherry},
-  howpublished={Collection Indologie 153?, Haṭha Yoga Series 5?},
+  howpublished={Collection Indologie - 162, Haṭha Yoga Series - 5},
   keywords={primary},
 }%!
 
@@ -2153,7 +2225,7 @@ Sound},
  year= {2024},
   publisher={École française d’Extrême-Orient},
   note={Pondicherry},
-  howpublished={Collection Indologie 146, Haṭha Yoga Series 3},
+  howpublished={Collection Indologie - 146, Haṭha Yoga Series - 3},
   keywords={primary},
 }%!
 
