--- a/preamble.tex
+++ b/preamble.tex
@@ -193,7 +193,7 @@
 
 \DeclareFieldFormat{postnote}{#1}
 \renewcommand{\postnotedelim}{, }
-\addbibresource{bindu.bib}
+\addbibresource{intro.bib}
 
 
 
